2001-07-16  Yuuichi Teranishi  <teranisi@gohome.org>

	* es-wiki.el (elserv-wiki-search-page): Rewrite for latest emacs-wiki.
	(elsesrv-wiki-compilation-finish-function): Removed.

	* elserv.el (elserv-service-function): Redirect "" to "/".

	* es-monitor.el: Removed "(require 'mcs-20)".

2001-07-16  OHASHI Akira  <bg66@koka-in.org>

        * elserv-autoindex.el (elserv-autoindex-ignore-list): Change list
        contents to regexp.
        (elserv-autoindex): Follow changes above.
        (make-match-function): Abolish.
        (elserv-autoindex-get-icon): Implement 'make-match-function'.

        * elserv-autoindex.el (elserv-autoindex): Simplify parent directory
        handlings.
        (elserv-autoindex-get-attr): Ditto.

        * es-monitor.el (toplevel): Require 'mcharset' and 'mcs-20'.

2001-07-16  Yuuichi Teranishi  <teranisi@gohome.org>

	* es-monitor.el: New file.

	* elserv.el (elserv-publish): Added description as first argument.
	(elserv-execute-service-maybe): Renamed from
	elserv-call-service-function-maybe.
	(elserv-execute-service-maybe): Use intern-soft instead of intern.
	(elserv-service-directory): Added argument `doc'.
	(elserv-service-string): Ditto.
	(elserv-service-function): Ditto.
	(elserv-publish-default): Publish monitor.

	* es-demo.el (elserv-demo-publish): Added description.

	* es-wiki.el (elserv-wiki-publish): Ditto.

	* es-mhc.el (elserv-mhc-publish): Ditto.

	* es-mhc.el (elserv-mhc-icon-publish-path): New user option.
	(elserv-mhc-icon-path): Changed default value as elserv-icon-path.
	(elserv-mhc/icon-setup): Eliminated.
	(elserv-mhc-icon-string): Changed to use elserv-mhc-icon-publish-path.
	(elserv-mhc-make-todo-list): Use elserv-mhc/icon-image-alist.
	(elserv-mhc/icon-image-alist): New internal variable.
	(elserv-mhc-icon-setup): Rewritten.

	* elserv.el: Defcustomized.

	* elserv-autoindex.el (elserv-autoindex-http-header): Don't hard code
	icon path.
	(elserv-autoindex-get-icon): Ditto.